--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "uuid": "^8.0.0"
   },
   "bugs": {
-    "url": "https://github.com/sanity-io/sanity/issues"
+    "url": "https://github.com/sanity-io/uuid/issues"
   },
   "homepage": "https://www.sanity.io/",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sanity-io/sanity.git"
+    "url": "git+https://github.com/sanity-io/uuid.git"
   },
   "devDependencies": {
     "prettier": "^2.1.2",
